--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-images-upload": "^1.2.8",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
-    "reactstrap": "^8.5.1"
+    "reactstrap": "^8.5.1",
+    "styled-components": "^5.2.0",
+    "styled-css-grid": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
